# internal/bootstrap/controller_routed.go
@@ -361,6 +361,15 @@ func (b *RoutedController) ListNumscripts(ctx context.Context, ledger string) ([
 	return c.ListNumscripts(ctx, ledger)
 }
 
+func (b *RoutedController) GetTemplateUsage(ctx context.Context, ledger, name string) (*commonpb.TemplateUsage, error) {
+	c, _, err := b.readCtrl(ctx)
+	if err != nil {
+		return nil, err
+	}
+
+	return c.GetTemplateUsage(ctx, ledger, name)
+}
+
 func (b *RoutedController) GetChapterSchedule(ctx context.Context) (string, error) {
 	c, _, err := b.readCtrl(ctx)
 	if err != nil {
